service.yaml
apiVersion: v1
kind: Service
metadata:
  name: class-app-service
spec:
  selector:
    app: class-app
  ports:
     - protocol: TCP
       port: 80
       targetPort: 80
  type: ClusterIP
