ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: class-app-ingress
spec: 
  rules:
  - host: classapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: class-app-service
            port:
              number: 80
